(feat/www): implement higher education
