# apps/api/app/Models/Highereducation.php
@@ -2,6 +2,7 @@
 
 namespace App\Models;
 
+use Illuminate\Database\Eloquent\Attributes\Table;
 use Illuminate\Database\Eloquent\Concerns\HasUlids;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
@@ -11,16 +12,26 @@ use Illuminate\Database\Eloquent\Attributes\Fillable;
 #[Fillable([
     'college_name',
     'rank',
-    'acadmeic_year',
+    'academic_year',
     'student_id',
     'institution_id',
     'program_id',
 ])]
 
+#[Table('higher_educations')]
 class HigherEducation extends Model
 {
     //
     use HasUlids, HasFactory;
+
+    protected function casts(): array
+    {
+        return [
+            'academic_year' => 'integer',
+            'rank' => 'integer',
+        ];
+    }
+
     public function institution(): BelongsTo
     {
         return $this->belongsTo(Institution::class);
